[FIX] web_studio: correctly scale report preview
When priting in PDF, the report wasn't looking the same as the Studio
preview.

Task 1878211

--- a/web_studio/static/src/scss/report_iframe.scss
+++ b/web_studio/static/src/scss/report_iframe.scss
@@ -3,6 +3,10 @@
  * bundle (web_studio.report_assets).
  */
 
+:root {
+    font-size: 14px;
+}
+
 .o_no_content_helper {
     border: 2px dashed gray('400');
     margin-top: 10px;
